consolidated locales for mx conversion

--- a/locale/de/filtaquilla.properties
+++ b/locale/de/filtaquilla.properties
@@ -1,39 +1,39 @@
 extensions.filtaquilla.description=Benutzerdefinierte Aktionen für Mailfilter
-filtaquilla.subjectappend.name=Präfix vor Betreff
-filtaquilla.subjectsuffix.name=An Betreff anhängen
-filtaquilla.removekeyword.name=Schlagwort entfernen
-filtaquilla.removeflagged.name=Stern entfernen
-filtaquilla.nobiff.name=Nicht benachrichtigen
-filtaquilla.copyasread.name=Gelesene Kopie erstellen
-filtaquilla.markunread.name=Als ungelesen markieren
-filtaquilla.markreplied.name=Als beantwortet markieren
-filtaquilla.launchfile.name=Datei ausführen
-filtaquilla.runfile.name=Programm ausführen
-filtaquilla.trainasjunk.name=Als Junk kategorisieren
-filtaquilla.trainasgood.name=Als kein Junk kategorisieren
-filtaquilla.mustSelectFolder=Bitte ein Verzeichnis auswählen
-filtaquilla.subjectregex.name=Betreff Vergleichen (Regulärer Ausdruck)
-filtaquilla.headerregex.name=Header Vergleichen (Regulärer Ausdruck)
-filtaquilla.bodyregex.name=Body Vergleichen (Regulärer Ausdruck)
-filtaquilla.attachmentregex.name=Anhangs-Namen Vergleichen (Regulärer Ausdruck)
-filtaquilla.javascript.name=JavaScript
-filtaquilla.threadheadtag.name=Schlagwort der Ersten Mail der Unterhaltung
-filtaquilla.threadanytag.name=Schlagwort der Mails der Unterhaltung
+fq.subjectprepend=Präfix vor Betreff
+fq.subjectappend=An Betreff anhängen
+fq.removekeyword=Schlagwort entfernen
+fq.removeflagged=Stern entfernen
+fq.nobiff=Nicht benachrichtigen
+fq.copyAsRead=Gelesene Kopie erstellen
+fq.markUnread=Als ungelesen markieren
+fq.markReplied=Als beantwortet markieren
+fq.launchFile=Datei ausführen
+fq.runFile=Programm ausführen
+fq.trainJunk=Als Junk kategorisieren
+fq.trainGood=Als kein Junk kategorisieren
+fq.filtaquilla.mustSelectFolder=Bitte ein Verzeichnis auswählen
+fq.subjectRegex=Betreff Vergleichen (Regulärer Ausdruck)
+fq.hdrRegex=Header Vergleichen (Regulärer Ausdruck)
+fq.bodyRegex=Body Vergleichen (Regulärer Ausdruck)
+fq.attachmentRegex=Anhangs-Namen Vergleichen (Regulärer Ausdruck)
+fq.javascript=JavaScript
+fq.threadHeadTag=Schlagwort der Ersten Mail der Unterhaltung
+fq.threadAnyTag=Schlagwort der Mails der Unterhaltung
 filtaquilla.filters=Filter
 filtaquilla.inherit=Übernehmen
 filtaquilla.enabled=Aktiv
 filtaquilla.applyIncomingFilters=Eingehende Filter ausführen
 filtaquilla.applyIncomingFilters.accesskey=F
-filtaquilla.print.name=Drucken
-filtaquilla.addSender.name=Absenderadresse zu Gruppe hinzufügen
-filtaquilla.saveAttachment.name=Anhänge speichern in
-filtaquilla.detachAttachments.name=Anhänge abtrennen nach
+fq.print=Drucken
+fq.addSender=Absenderadresse zu Gruppe hinzufügen
+fq.saveAttachment=Anhänge speichern in
+fq.detachAttachments=Anhänge abtrennen nach
 filtaquilla.javascriptAction.name=JavaScript Aktion
 filtaquilla.javascriptActionBody.name=JavaScript Aktion (mit body)
-filtaquilla.saveMessageAsFile.name=Nachricht als Datei speichern
-filtaquilla.moveLater.name=Später verschieben
-filtaquilla.searchBcc.name=Blindkopie (Bcc)
-filtaquilla.folderName.name=Verzeichnisname
+fq.saveMsgAsFile=Nachricht als Datei speichern
+fq.moveLater=Später verschieben
+fq.Bcc=Blindkopie (Bcc)
+fq.folderName=Verzeichnisname
 filtaquilla.selectFolder.title=Verzeichnis auswählen
 filtaquilla.selectFolder.btn=Verzeichnis wählen…
 filtaquilla.editJavascript=JavaScript editieren…
