--- a/locale/nl/filtaquilla.properties
+++ b/locale/nl/filtaquilla.properties
@@ -1,39 +1,39 @@
 extensions.filtaquilla.description=Aangepaste acties e-mailfilter
-filtaquilla.subjectappend.name=Aan onderwerp vooraf laten gaan
-filtaquilla.subjectsuffix.name=Aan onderwerp toevoegen
-filtaquilla.removekeyword.name=Label verwijderen
-filtaquilla.removeflagged.name=Ster verwijderen
-filtaquilla.nobiff.name=Geen notificatie
-filtaquilla.copyasread.name=Kopiëren als gelezen
-filtaquilla.markunread.name=Markeren als ongelezen
-filtaquilla.markreplied.name=Markeren als beantwoord
-filtaquilla.launchfile.name=Bestand uitvoeren
-filtaquilla.runfile.name=Programma uitvoeren
-filtaquilla.trainasjunk.name=Trainen als ongewenst
-filtaquilla.trainasgood.name=Trainen als gewenst
-filtaquilla.mustSelectFolder=U dient een doelmap op te geven
-filtaquilla.subjectregex.name=Overeenkomst reguliere expressie onderwerp
-filtaquilla.headerregex.name=Overeenkomst reguliere expressie  header
-filtaquilla.bodyregex.name=Overeenkomst reguliere expressie body
-filtaquilla.attachmentregex.name=RegEx-overeenkomst bijlagenaam
-filtaquilla.javascript.name=Javascript
-filtaquilla.threadheadtag.name=Label van discussieheader
-filtaquilla.threadanytag.name=Label van discussieberichten
+fq.subjectprepend=Aan onderwerp vooraf laten gaan
+fq.subjectappend=Aan onderwerp toevoegen
+fq.removekeyword=Label verwijderen
+fq.removeflagged=Ster verwijderen
+fq.nobiff=Geen notificatie
+fq.copyAsRead=Kopiëren als gelezen
+fq.markUnread=Markeren als ongelezen
+fq.markReplied=Markeren als beantwoord
+fq.launchFile=Bestand uitvoeren
+fq.runFile=Programma uitvoeren
+fq.trainJunk=Trainen als ongewenst
+fq.trainGood=Trainen als gewenst
+fq.filtaquilla.mustSelectFolder=U dient een doelmap op te geven
+fq.subjectRegex=Overeenkomst reguliere expressie onderwerp
+fq.hdrRegex=Overeenkomst reguliere expressie  header
+fq.bodyRegex=Overeenkomst reguliere expressie body
+fq.attachmentRegex=RegEx-overeenkomst bijlagenaam
+fq.javascript=Javascript
+fq.threadHeadTag=Label van discussieheader
+fq.threadAnyTag=Label van discussieberichten
 filtaquilla.filters=Filters
 filtaquilla.inherit=Erven
 filtaquilla.enabled=Ingeschakeld
 filtaquilla.applyIncomingFilters=Inkomende filters toepassen
 filtaquilla.applyIncomingFilters.accesskey=F
-filtaquilla.print.name=Afdrukken
-filtaquilla.addSender.name=Afzender aan adreslijst toevoegen
-filtaquilla.saveAttachment.name=Bijlagen opslaan in
-filtaquilla.detachAttachments.name=Bijlagen ontkoppelen naar
+fq.print=Afdrukken
+fq.addSender=Afzender aan adreslijst toevoegen
+fq.saveAttachment=Bijlagen opslaan in
+fq.detachAttachments=Bijlagen ontkoppelen naar
 filtaquilla.javascriptAction.name=Javascript-actie
 filtaquilla.javascriptActionBody.name=Javascript-actie met hoofdtekst
-filtaquilla.saveMessageAsFile.name=Bericht als bestand opslaan
-filtaquilla.moveLater.name=Later verplaatsen
-filtaquilla.searchBcc.name=Bcc
-filtaquilla.folderName.name=Mapnaam
+fq.saveMsgAsFile=Bericht als bestand opslaan
+fq.moveLater=Later verplaatsen
+fq.Bcc=Bcc
+fq.folderName=Mapnaam
 filtaquilla.selectFolder.title=Select a Folder
 filtaquilla.selectFolder.btn=Pick Folder…
 filtaquilla.editJavascript=Edit JavaScript…
