--- a/locale/ru/filtaquilla.properties
+++ b/locale/ru/filtaquilla.properties
@@ -1,39 +1,39 @@
 extensions.filtaquilla.description=Почтовый фильтр пользовательских действий
-filtaquilla.subjectappend.name=Приставка темы
-filtaquilla.subjectsuffix.name=Суффикс темы
-filtaquilla.removekeyword.name=Удалить тег
-filtaquilla.removeflagged.name=Удалить звездочку
-filtaquilla.nobiff.name=Не уведомлять
-filtaquilla.copyasread.name=Скопировать как прочитанное
-filtaquilla.markunread.name=Пометить как непрочитанное
-filtaquilla.markreplied.name=Пометить как отвеченное
-filtaquilla.launchfile.name=Запустить файл
-filtaquilla.runfile.name=Запустить программу
-filtaquilla.trainasjunk.name=Предположительно спам
-filtaquilla.trainasgood.name=Предположительно хорошее
-filtaquilla.mustSelectFolder=Выберите целевую папку
-filtaquilla.subjectregex.name=Совпадение с регэкспом темы
-filtaquilla.headerregex.name=Совпадение с регэкспом заголовка
-filtaquilla.bodyregex.name=Совпадение с регэкспом body
-filtaquilla.attachmentregex.name=Совпадение с регэкспом вложения
-filtaquilla.javascript.name=Javascript
-filtaquilla.threadheadtag.name=Тег - Заголовок нити
-filtaquilla.threadanytag.name=Тег - Сообщения нити
+fq.subjectprepend=Приставка темы
+fq.subjectappend=Суффикс темы
+fq.removekeyword=Удалить тег
+fq.removeflagged=Удалить звездочку
+fq.nobiff=Не уведомлять
+fq.copyAsRead=Скопировать как прочитанное
+fq.markUnread=Пометить как непрочитанное
+fq.markReplied=Пометить как отвеченное
+fq.launchFile=Запустить файл
+fq.runFile=Запустить программу
+fq.trainJunk=Предположительно спам
+fq.trainGood=Предположительно хорошее
+fq.filtaquilla.mustSelectFolder=Выберите целевую папку
+fq.subjectRegex=Совпадение с регэкспом темы
+fq.hdrRegex=Совпадение с регэкспом заголовка
+fq.bodyRegex=Совпадение с регэкспом body
+fq.attachmentRegex=Совпадение с регэкспом вложения
+fq.javascript=Javascript
+fq.threadHeadTag=Тег - Заголовок нити
+fq.threadAnyTag=Тег - Сообщения нити
 filtaquilla.filters=Фильтры
 filtaquilla.inherit=Унаследованное
 filtaquilla.enabled=Включено
 filtaquilla.applyIncomingFilters=Применить входящие фильтры
 filtaquilla.applyIncomingFilters.accesskey=F
-filtaquilla.print.name=Печать
-filtaquilla.addSender.name=Добавить отправителя в список адресов
-filtaquilla.saveAttachment.name=Сохранить вложения в
-filtaquilla.detachAttachments.name=Удалить вложения в
+fq.print=Печать
+fq.addSender=Добавить отправителя в список адресов
+fq.saveAttachment=Сохранить вложения в
+fq.detachAttachments=Удалить вложения в
 filtaquilla.javascriptAction.name=Javascript действие
 filtaquilla.javascriptActionBody.name=Javascript действие с телом сообщения
-filtaquilla.saveMessageAsFile.name=Сохранить сообщение как файл
-filtaquilla.moveLater.name=Переместить позже
-filtaquilla.searchBcc.name=Bcc
-filtaquilla.folderName.name=Имя папки
+fq.saveMsgAsFile=Сохранить сообщение как файл
+fq.moveLater=Переместить позже
+fq.Bcc=Bcc
+fq.folderName=Имя папки
 filtaquilla.selectFolder.title=Выберите папку
 filtaquilla.selectFolder.btn=Выбрать папку…
 filtaquilla.editJavascript=Редактировать JavaScript…
