--- a/locale/en-US/filtaquilla.properties
+++ b/locale/en-US/filtaquilla.properties
@@ -1,39 +1,39 @@
 extensions.filtaquilla.description=Mail filter custom actions
-filtaquilla.subjectappend.name=Prepend to Subject
-filtaquilla.subjectsuffix.name=Suffix to Subject
-filtaquilla.removekeyword.name=Remove Tag
-filtaquilla.removeflagged.name=Remove Star
-filtaquilla.nobiff.name=Do Not Notify
-filtaquilla.copyasread.name=Copy As Read
-filtaquilla.markunread.name=Mark As Unread
-filtaquilla.markreplied.name=Mark Replied
-filtaquilla.launchfile.name=Launch File
-filtaquilla.runfile.name=Run Program
-filtaquilla.trainasjunk.name=Train As Junk
-filtaquilla.trainasgood.name=Train As Good
-filtaquilla.mustSelectFolder=You must select a target folder
-filtaquilla.subjectregex.name=Subject Regex Match
-filtaquilla.headerregex.name=Header Regex Match
-filtaquilla.bodyregex.name=Body Regex Match
-filtaquilla.attachmentregex.name=Attachment Name Regex Match
-filtaquilla.javascript.name=Javascript
-filtaquilla.threadheadtag.name=Tag of Thread Head
-filtaquilla.threadanytag.name=Tag of Thread Messages
+fq.subjectprepend=Prepend to Subject
+fq.subjectappend=Append to Subject
+fq.removekeyword=Remove Tag
+fq.removeflagged=Remove Star
+fq.nobiff=Do Not Notify
+fq.copyAsRead=Copy As Read
+fq.markUnread=Mark As Unread
+fq.markReplied=Mark Replied
+fq.launchFile=Launch File
+fq.runFile=Run Program
+fq.trainJunk=Train As Junk
+fq.trainGood=Train As Good
+fq.filtaquilla.mustSelectFolder=You must select a target folder
+fq.subjectRegex=Subject Regex Match
+fq.hdrRegex=Header Regex Match
+fq.bodyRegex=Body Regex Match
+fq.attachmentRegex=Attachment Name Regex Match
+fq.javascript=Javascript
+fq.threadHeadTag=Tag of Thread Head
+fq.threadAnyTag=Tag of Thread Messages
 filtaquilla.filters=Filters
 filtaquilla.inherit=Inherit
 filtaquilla.enabled=Enabled
 filtaquilla.applyIncomingFilters=Apply Incoming Filters
 filtaquilla.applyIncomingFilters.accesskey=F
-filtaquilla.print.name=Print
-filtaquilla.addSender.name=Add Sender to Address List
-filtaquilla.saveAttachment.name=Save Attachments To
-filtaquilla.detachAttachments.name=Detach Attachments To
+fq.print=Print
+fq.addSender=Add Sender to Address List
+fq.saveAttachment=Save Attachments To
+fq.detachAttachments=Detach Attachments To
 filtaquilla.javascriptAction.name=Javascript Action
 filtaquilla.javascriptActionBody.name=Javascript Action with Body
-filtaquilla.saveMessageAsFile.name=Save Message as File
-filtaquilla.moveLater.name=Move Later
-filtaquilla.searchBcc.name=Bcc
-filtaquilla.folderName.name=Folder Name
+fq.saveMsgAsFile=Save Message as File
+fq.moveLater=Move Later
+fq.Bcc=Bcc
+fq.folderName=Folder Name
 filtaquilla.selectFolder.title=Select a Folder
 filtaquilla.selectFolder.btn=Pick Folder…
 filtaquilla.editJavascript=Edit JavaScript…
