--- a/locale/ru/prefwindow.dtd
+++ b/locale/ru/prefwindow.dtd
@@ -1,50 +1,50 @@
 <!ENTITY prefwindow.title "FiltaQuilla настройки">
 <!ENTITY pane1.title "FiltaQuilla Настройки">
 <!-- filter actions -->
-<!ENTITY checkMoveLaterEnabled.label "Переместить позже">
-<!ENTITY checkMoveLaterEnabled.accesskey "A">
-<!ENTITY checkCopyAsReadEnabled.label "Копировать как прочитаннное">
-<!ENTITY checkCopyAsReadEnabled.accesskey "C">
-<!ENTITY checkDetachAttachmentsEnabled.label "Отсоединить вложения в">
-<!ENTITY checkDetachAttachmentsEnabled.accesskey "D">
-<!ENTITY checkMarkRepliedEnabled.label "Пометить как отвеченное">
-<!ENTITY checkMarkRepliedEnabled.accesskey "E">
-<!ENTITY checkLaunchFileEnabled.label "Запустить файл">
-<!ENTITY checkLaunchFileEnabled.accesskey "F">
-<!ENTITY checkTrainAsGoodEnabled.label "Предположительно хорошее">
-<!ENTITY checkTrainAsGoodEnabled.accesskey "G">
-<!ENTITY checkSaveAttachmentEnabled.label "Сохранить вложения в">
-<!ENTITY checkSaveAttachmentEnabled.accesskey "H">
-<!ENTITY checkAttachmentRegexEnabled.label "Совпадение с регэкспом имени вложения">
-<!ENTITY checkRegexpCaseInsensitiveEnabled.label "Regex без учета регистра Match">
-<!ENTITY checkSaveMessageAsFileEnabled.label "Сох">
-<!ENTITY checkSaveMessageAsFileEnabled.accesskey "I">
-<!ENTITY checkTrainAsJunkEnabled.label "Предположительно спам">
-<!ENTITY checkTrainAsJunkEnabled.accesskey "J">
-<!ENTITY checkAddSenderEnabled.label "Добавить отправителя в список адресов">
-<!ENTITY checkAddSenderEnabled.accesskey "L">
-<!ENTITY checkMarkUnreadEnabled.label "Отметить как непрочитанное">
-<!ENTITY checkMarkUnreadEnabled.accesskey "M">
-<!ENTITY checkNoBiffEnabled.label "Не уведомлять">
-<!ENTITY checkNoBiffEnabled.accesskey "N">
-<!ENTITY checkRemoveKeywordEnabled.label "Удалить тег">
-<!ENTITY checkRemoveKeywordEnabled.accesskey "O">
-<!ENTITY checkPrintEnabled.label "Печать">
-<!ENTITY checkPrintEnabled.accesskey "P">
-<!ENTITY checkRunFileEnabled.label "Запустить программу">
-<!ENTITY checkRunFileEnabled.accesskey "R">
-<!ENTITY checkRemoveFlaggedEnabled.label "Удалить звездочку">
-<!ENTITY checkRemoveFlaggedEnabled.accesskey "S">
-<!ENTITY checkSubjectAppendEnabled.label "Приставка темы">
-<!ENTITY checkSubjectAppendEnabled.accesskey "U">
-<!ENTITY checkJavascriptActionEnabled.label "Javascript Действие">
-<!ENTITY checkJavascriptActionEnabled.accesskey "V">
-<!ENTITY checkSubjectSuffixEnabled.label "Суффикс темы">
-<!ENTITY checkSubjectSuffixEnabled.accesskey "X">
+<!ENTITY fq.moveLater "Переместить позже">
+<!ENTITY fq.moveLater.access "A">
+<!ENTITY fq.copyAsRead "Копировать как прочитаннное">
+<!ENTITY fq.copyAsRead.access "C">
+<!ENTITY fq.detachAttachments "Отсоединить вложения в">
+<!ENTITY fq.detachAttachments.access "D">
+<!ENTITY fq.markReplied "Пометить как отвеченное">
+<!ENTITY fq.markReplied.access "E">
+<!ENTITY fq.launchFile "Запустить файл">
+<!ENTITY fq.launchFile.access "F">
+<!ENTITY fq.trainGood "Предположительно хорошее">
+<!ENTITY fq.trainGood.access "G">
+<!ENTITY fq.saveAttachment "Сохранить вложения в">
+<!ENTITY fq.saveAttachment.access "H">
+<!ENTITY fq.attachmentRegex "Совпадение с регэкспом имени вложения">
+<!ENTITY fq.regex.caseInsensitive "Regex без учета регистра Match">
+<!ENTITY fq.saveMsgAsFile "Сох">
+<!ENTITY fq.saveMsgAsFile.access "I">
+<!ENTITY fq.trainJunk "Предположительно спам">
+<!ENTITY fq.trainJunk.access "J">
+<!ENTITY fq.addSender "Добавить отправителя в список адресов">
+<!ENTITY fq.addSender.access "L">
+<!ENTITY fq.markUnread "Отметить как непрочитанное">
+<!ENTITY fq.markUnread.access "M">
+<!ENTITY fq.nobiff "Не уведомлять">
+<!ENTITY fq.nobiff.access "N">
+<!ENTITY fq.removekeyword "Удалить тег">
+<!ENTITY fq.removekeyword.access "O">
+<!ENTITY fq.print "Печать">
+<!ENTITY fq.print.access "P">
+<!ENTITY fq.runFile "Запустить программу">
+<!ENTITY fq.runFile.access "R">
+<!ENTITY fq.removeflagged "Удалить звездочку">
+<!ENTITY fq.removeflagged.access "S">
+<!ENTITY fq.subjectprepend "Приставка темы">
+<!ENTITY fq.subjectprepend.access "U">
+<!ENTITY fq.javascriptAction "Javascript Действие">
+<!ENTITY fq.javascriptAction.access "V">
+<!ENTITY fq.subjectappend "Суффикс темы">
+<!ENTITY fq.subjectappend.access "X">
 <!ENTITY checkJavascriptActionBodyEnabled.label "Javascript действие с телом письма">
 <!ENTITY checkJavascriptActionBodyEnabled.accesskey "Y">
-<!ENTITY checkBodyRegexEnabled.label "Соответствие Body Regexp">
-<!ENTITY checkTonequillaEnabled.label "Проиграть звук (Tonequilla)">
+<!ENTITY fq.bodyRegex "Соответствие Body Regexp">
+<!ENTITY fq.toneQuilla "Проиграть звук (Tonequilla)">
 <!ENTITY optionsIntro "Включите желаемые пункты для диалогового окна «Правила фильтра». Перезапустите после изменения.">
 <!ENTITY filterActions "Действия фильтра">
 <!ENTITY searchTerms "Темины поиска">
@@ -52,23 +52,23 @@
 <!ENTITY supportPage "Посетить страницу поддержки">
 <!ENTITY supportPage_desc "Эта страница описывает различные действия и условия, которые вы можете добавить к почтовым фильтрам с FiltaQuilla.">
 <!ENTITY quickFiltersPage "Получить quickFilters!">
-<!ENTITY quickFiltersPage_desc "Загрузите это дополнение - турбо-зарядка фильтрации. Quickfilters делают управление фильтрацией невероятно лёгким.">
+<!ENTITY quickFiltersPage_desc "Загрузите это дополнение - турбо-зарядка фильтрации. quickFilters делают управление фильтрацией невероятно лёгким.">
 <!ENTITY supportFiltaquilla "Поддержать FiltaQuilla">
-<!ENTITY supportFiltaquilla_desc "FiltaQuilla БЕСПЛАТНО для скачивания и использования - лучший способ поддержать команду разработки, купить лицензию на QuickFilters Pro. Это удивительно удобные расширения для управления фильтрацией.">
+<!ENTITY supportFiltaquilla_desc "FiltaQuilla БЕСПЛАТНО для скачивания и использования - лучший способ поддержать команду разработки, купить лицензию на quickFilters Pro. Это удивительно удобные расширения для управления фильтрацией.">
 <!-- search terms -->
-<!ENTITY checkSearchBccEnabled.label "Bcc">
-<!ENTITY checkSearchBccEnabled.accesskey "B">
-<!ENTITY checkFolderNameEnabled.label "Имя папки">
-<!ENTITY checkFolderNameEnabled.accesskey "F">
-<!ENTITY checkThreadHeadTagEnabled.label "Тег - Заголовок нити">
-<!ENTITY checkThreadHeadTagEnabled.accesskey "D">
-<!ENTITY checkHeaderRegexEnabled.label "Совпадение с регэкспом заголовка">
-<!ENTITY checkHeaderRegexEnabled.accesskey "H">
+<!ENTITY fq.Bcc "Bcc">
+<!ENTITY fq.Bcc.access "B">
+<!ENTITY fq.folderName "Имя папки">
+<!ENTITY fq.folderName.access "F">
+<!ENTITY fq.threadHeadTag "Тег - Заголовок нити">
+<!ENTITY fq.threadHeadTag.access "D">
+<!ENTITY fq.hdrRegex "Совпадение с регэкспом заголовка">
+<!ENTITY fq.hdrRegex.access "H">
 <!ENTITY checkJavascriptEnabled.label "Javascript">
 <!ENTITY checkJavascriptEnabled.accesskey "J">
-<!ENTITY checkSubjectRegexEnabled.label "Совпадение с регэкспом темы">
-<!ENTITY checkSubjectRegexEnabled.accesskey "S">
-<!ENTITY checkThreadAnyTagEnabled.label  "Тег - Сообщения нити">
-<!ENTITY checkThreadAnyTagEnabled.accesskey "T">
+<!ENTITY fq.subjectRegex "Совпадение с регэкспом темы">
+<!ENTITY fq.subjectRegex.access "S">
+<!ENTITY fq.threadAnyTag  "Тег - Сообщения нити">
+<!ENTITY fq.threadAnyTag.access "T">
 <!ENTITY helpFeatureTip "Показать детали этой фичи">
 
