--- a/locale/sv-SE/filtaquilla.properties
+++ b/locale/sv-SE/filtaquilla.properties
@@ -1,39 +1,39 @@
 extensions.filtaquilla.description=E-postfiltrerande anpassade åtgärder
-filtaquilla.subjectappend.name=Lägg till i ämnets början
-filtaquilla.subjectsuffix.name=Lägg till i ämnets slut
-filtaquilla.removekeyword.name=Ta bort tagg
-filtaquilla.removeflagged.name=Ta bort stjärna
-filtaquilla.nobiff.name=Avisera inte
-filtaquilla.copyasread.name=Kopiera som läst
-filtaquilla.markunread.name=Märk som oläst
-filtaquilla.markreplied.name=Markera lästa
-filtaquilla.launchfile.name=Kör fil
-filtaquilla.runfile.name=Kör program
-filtaquilla.trainasjunk.name=Träna som skräp
-filtaquilla.trainasgood.name=Träna som bra
-filtaquilla.mustSelectFolder=Du måste markera en målmapp
-filtaquilla.subjectregex.name=Regex-matchning för ämne
-filtaquilla.headerregex.name=Regex-matchning för sidhuvud
-filtaquilla.bodyregex.name=Regex-matchning för body
-filtaquilla.attachmentregex.name=Regexmatchning i bilagans namn
-filtaquilla.javascript.name=JavaScript
-filtaquilla.threadheadtag.name=Tagg för trådsidhuvudet
-filtaquilla.threadanytag.name=Tagg för trådmeddelanden
+fq.subjectprepend=Lägg till i ämnets början
+fq.subjectappend=Lägg till i ämnets slut
+fq.removekeyword=Ta bort tagg
+fq.removeflagged=Ta bort stjärna
+fq.nobiff=Avisera inte
+fq.copyAsRead=Kopiera som läst
+fq.markUnread=Märk som oläst
+fq.markReplied=Markera lästa
+fq.launchFile=Kör fil
+fq.runFile=Kör program
+fq.trainJunk=Träna som skräp
+fq.trainGood=Träna som bra
+fq.filtaquilla.mustSelectFolder=Du måste markera en målmapp
+fq.subjectRegex=Regex-matchning för ämne
+fq.hdrRegex=Regex-matchning för sidhuvud
+fq.bodyRegex=Regex-matchning för body
+fq.attachmentRegex=Regexmatchning i bilagans namn
+fq.javascript=JavaScript
+fq.threadHeadTag=Tagg för trådsidhuvudet
+fq.threadAnyTag=Tagg för trådmeddelanden
 filtaquilla.filters=Filter
 filtaquilla.inherit=Ärv
 filtaquilla.enabled=Aktiverad
 filtaquilla.applyIncomingFilters=Tillämpa filter för inkommande
 filtaquilla.applyIncomingFilters.accesskey=f
-filtaquilla.print.name=Skriv ut
-filtaquilla.addSender.name=Lägg till avsändaren i adresslistan
-filtaquilla.saveAttachment.name=Spara bifogade filer som
-filtaquilla.detachAttachments.name=Flytta bifogade filer till
+fq.print=Skriv ut
+fq.addSender=Lägg till avsändaren i adresslistan
+fq.saveAttachment=Spara bifogade filer som
+fq.detachAttachments=Flytta bifogade filer till
 filtaquilla.javascriptAction.name=JavaScript-åtgärd
 filtaquilla.javascriptActionBody.name=JavaScript-åtgärd med innehållstext
-filtaquilla.saveMessageAsFile.name=Spara meddelande som fil
-filtaquilla.moveLater.name=Flytta senare
-filtaquilla.searchBcc.name=Hemlig kopia
-filtaquilla.folderName.name=Mappnamn
+fq.saveMsgAsFile=Spara meddelande som fil
+fq.moveLater=Flytta senare
+fq.Bcc=Hemlig kopia
+fq.folderName=Mappnamn
 filtaquilla.selectFolder.title=Välj en mapp
 filtaquilla.selectFolder.btn=Välj mapp…
 filtaquilla.editJavascript=Redigera JavaScript…
